# aoc2025

./: .gitignore  Cargo.toml  GetAllInputs.sh  GetInput.sh  NewDay.sh  ProfileDbg.sh  ProfileRel.sh  Run.sh  RunRel.sh  RunRelAll.sh  RunVis.sh  Test.sh
aoc/: Cargo.toml
aoc/src/: lib.rs
aoc/src/gif/: mod.rs  region.rs
aoc/src/input/: mmap.rs  mod.rs
day01/: Cargo.toml
day01/src/: main.rs  tests.rs
day02/: Cargo.toml
day02/src/: main.rs  tests.rs
day03/: Cargo.toml
day03/src/: main.rs  tests.rs
day04/: Cargo.toml
day04/src/: main.rs  tests.rs
day04vis/: Cargo.toml
day04vis/src/: main.rs
day05/: Cargo.toml
day05/src/: main.rs  tests.rs
day06/: Cargo.toml
day06/src/: main.rs  tests.rs
day07/: Cargo.toml
day07/src/: main.rs  tests.rs
day08/: Cargo.toml
day08/src/: main.rs  tests.rs
day09/: Cargo.toml
day09/src/: main.rs  tests.rs
day09vis/: Cargo.toml
day09vis/src/: main.rs
day10/: Cargo.toml
day10/.cargo/: config.toml
day10/src/: main.rs  tests.rs
day11/: Cargo.toml
day11/src/: main.rs  tests.rs
day12/: Cargo.toml
day12/src/: main.rs  tests.rs
stats/: day01-macos.txt  day02-macos.txt  day03-macos.txt  day04-macos.txt  day04vis-macos.txt  day05-macos.txt  day06-macos.txt  day07-macos.txt  day08-macos.txt  day09-macos.txt  day09vis-macos.txt  day10-macos.txt  day11-macos.txt  day12-macos.txt
template/: Cargo.toml
template/src/: main.rs  tests.rs
