cargo-features = ["profile-rustflags"]

[workspace.package]
edition = "2024"
authors = ["Andrew Ward (andy.ward.uk@gmail.com)"]

[workspace]
resolver = "2"

members = ["aoc", "day01", "day02", "day03", "day04", "day04vis", "day05"]

[profile.release]
debug = false
lto = "fat"
strip = true

[profile.profile]
inherits = "release"
debug = true
lto = false
strip = false
